--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dstelzl-github-pkg-demo",
   "repository": {
-    "url": "git://github.com/dstelzl/github-pkg-demo.git",
+    "url": "git://github.com/dstelzl/github-pkg-demo.git"},
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
